# myRenderer

./: .gitignore  CMakeLists.txt  Constants.h  ModelLoader.cpp  ModelLoader.h  README.md  Rasterizer.cpp  Rasterizer.h  Renderer  Tests.h  main.cpp
Geometry/: Geometry.h  Matrix.h  Vec.h
old/: Rendere-version-5  Renderer  Renderer-old  Renderer-version-1  Renderer-version-2  Renderer-version-3  Renderer-version-4  Renderer-version-6  Renderer-version-7
src/Core/: Application.cpp  Application.h  Camera.h  IShader.cpp  IShader.h  ModelInstance.h  Rasterizer.cpp  Rasterizer.h  Renderer.h
src/IO/: ModelLoader.cpp  ModelLoader.h  tgaimage.h
src/Math/: Geometry.h  Matrix.h  Vec.h
src/Renderer/: Renderer.cpp  Renderer.h  Scene.h
src/Shaders/: DepthShader.cpp  DepthShader.h  PhongShader.cpp  PhongShader.h  ScreenShader.h
src/Utils/: ThreadPool.cpp  ThreadPool.h
tests/: RendererUnitTests.cpp  RendererUnitTests.h  Tests.h  VisualTests.cpp  VisualTests.h
